--- a/templates/index.html
+++ b/templates/index.html
@@ -287,6 +287,7 @@
                     <input type="file" id="fileInput" name="image" accept="image/*" required>
                     <button id="makeMagicButton" type="submit">Make Magic</button>
                 </div>
+                <p id="fileInputHelp">If you encounter issues selecting a photo, please try using a different browser or update your current browser.</p>
                 <div class="audio-controls">
                     <button id="rewindButton">Rewind</button>
                     <button id="forwardButton">Forward</button>
