--- a/templates/index.html
+++ b/templates/index.html
@@ -42,6 +42,7 @@
         <option value="en">English</option>
         <option value="uk">Ukrainian</option>
         <option value="ru">Russian</option>
+        <option value="es">Spanish</option>
     </select>
 
     <script src="{{ url_for('static', filename='js/scripts.js') }}"></script>
