--- a/templates/index.html
+++ b/templates/index.html
@@ -44,6 +44,10 @@
         <option value="ru">Russian</option>
         <option value="es">Spanish</option>
     </select>
+    <select id="voiceTypeSelect">
+        <option value="female">Female</option>
+        <option value="male">Male</option>
+    </select>
 
     <script src="{{ url_for('static', filename='js/scripts.js') }}"></script>
 </body>
