--- a/templates/index.html
+++ b/templates/index.html
@@ -29,12 +29,18 @@
                 </div>
                 <audio id="audioPlayer" controls></audio>
                 <div class="additional-controls">
-                    <a id="downloadButton">Download</a> <!-- Download button -->
-                    <button id="playbackSpeedButton">Speed: 1x</button> <!-- Playback Speed button -->
+                    <a id="downloadButton">Download</a>
+                    <button id="playbackSpeedButton">Speed: 1x</button>
                 </div>
                 <div id="output" class="card"></div>
+                <div id="progressContainer">
+                    <progress id="progressBar" value="0" max="100"></progress>
+                </div>
+                <div class="image-text-container">
+                    <img id="uploadedImage" src="" alt="Uploaded Image">
+                    <div id="textOverlay"></div>
+                </div>
             </form>
-            <!-- Live region for non-disruptive feedback -->
             <div id="liveRegion" aria-live="polite"></div>
         </div>
     </main>
