--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -236,45 +236,41 @@ input[type="file"] {
     white-space: nowrap;
 }
 
-/* Responsive adjustments */
-@media (max-width: 768px) {
-    .button-group,
-    .audio-controls,
-    .additional-controls {
-        flex-direction: column;
-        align-items: center;
-    }
-
-    .button-group label,
-    .button-group button,
-    .audio-controls button,
-    .additional-controls button,
-    .additional-controls a {
-        flex-basis: 100%;
-        margin-bottom: 10px;
-        max-width: none; /* Allow full width on small screens */
-    }
-
-    .play-pause-container button {
-        font-size: 24px; /* Adjusted font size */
-        padding: 20px 30px; /* Adjusted padding */
-    }
-
-    h2 {
-        font-size: 24px; /* Reduced font size */
-    }
+/* Popup styles */
+.popup {
+    display: none;
+    position: fixed;
+    z-index: 1000;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+    background-color: rgba(0, 0, 0, 0.5);
 }
 
-@media (max-width: 480px) {
-    h2 {
-        display: none; /* Hide the text on smaller screens */
-    }
+.popup-content {
+    background-color: #fefefe;
+    margin: 15% auto;
+    padding: 20px;
+    border: 1px solid #888;
+    width: 80%;
+    max-width: 800px;
+    position: relative;
 }
 
-/* Custom colors for specific buttons */
-.button-group label,
-.audio-controls button {
-    background-color: #000;
+.close-button {
+    color: #aaa;
+    float: right;
+    font-size: 28px;
+    font-weight: bold;
+}
+
+.close-button:hover,
+.close-button:focus {
+    color: black;
+    text-decoration: none;
+    cursor: pointer;
 }
 
 /* Image and Text Overlay */
