--- a/templates/index.html
+++ b/templates/index.html
@@ -51,7 +51,7 @@
             <span class="close-button">&times;</span>
             <div class="image-text-container">
                 <img id="uploadedImage" src="" alt="Uploaded Image">
-                <div id="textOverlay"></div>
+                <div id="highlightBox"></div>
             </div>
         </div>
     </div>
