--- a/templates/index.html
+++ b/templates/index.html
@@ -11,7 +11,7 @@
         <h1>Yonchee</h1>
     </header>
     <main>
-        <div class="left-section">
+        <div class="sidebar" id="sidebar">
             <h2>Text to Speech Service</h2>
             <form id="uploadForm">
                 <div class="button-group">
@@ -35,6 +35,12 @@
             </form>
             <div id="liveRegion" aria-live="polite"></div>
         </div>
+        <div class="content" id="content">
+            <div id="imageContainer">
+                <img id="uploadedImage" src="" alt="Uploaded Image">
+                <div id="highlightBox"></div>
+            </div>
+        </div>
     </main>
     <select id="languageSelect">
         <option value="en">English</option>
@@ -42,16 +48,6 @@
         <option value="ru">Russian</option>
         <option value="es">Spanish</option>
     </select>
-
-    <div id="popup" class="popup">
-        <div class="popup-content">
-            <span class="close-button">&times;</span>
-            <div class="image-text-container">
-                <img id="uploadedImage" src="" alt="Uploaded Image">
-                <div id="highlightBox"></div>
-            </div>
-        </div>
-    </div>
 
     <script src="{{ url_for('static', filename='js/scripts.js') }}"></script>
 </body>
